Доработал репозиторный слой и провел глубой рефакторинг проекта. Реализовал интеграционные тесты, обновил unit тесты для соответствия обновленной версии проекта